controlled/yaml/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: controlled
  labels:
    istio-injection: enabled   # Istio adds a sidecar proxy to every pod
