controlled/yaml/04-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-side
  namespace: controlled
spec:
  selector:
    app: server-side
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
